Code cleanup for version 3.29-05